	  uncursed to cursed

	* item changes:
	  - Decreased weight of all mithril armor, especially ones of elven make

	* user interface improvements:
	  - Added naming last broken object to #name menu (idea from AceHack/NH4)
	  - Automatically identify scrolls of scare monster during pickup when
	    turning to dust or changing known BUC state

	* dungeon layout:
	  - Backyard of watery castle get trap doors to ensure player can
	    descend to the VotD
	  - Replaced lava with water on lava castle

	* bug fixes
	  - Fixed erroneous messages when remaining in stinking clouds
	  - Shopkeeper stopping player from entering a shop when having crystal
	    picks in the inventory
	  - Fixed improper explosion behavior for wand of fire and wand of cold (reported by Stenno)
	  - Fixed crash when drained troll corpse evaporated but rot timer was
	    still set on invalid pointer
	  - Correctly identify uncursed items in bags dropped on altars when hallucinating
	  - Prevent potential endless when praying and using perma hallucination
	  - Fixed crash with a configured nameempty option (found and fixed by tertium)
	  - Fixed crash in X11 inventory
	  - Fixed possible endless loop in autotravel on the Rogue level
	  - Fixed lava breath related crash at the edges of the map

	* vanilla bug fixes:
	  - C343-439: Running NetHack in a terminal window with more than 255
	              rows or columns produces display errors.
	  - C343-320: Reading a Scroll of Mail no longer violates illiterate conduct

2013-12-08  UnNetHack 5.1.0
	* Mind flayer attacks only cause physical damage and int drain
	* Wands and spells of digging are no longer restricted on maze levels
	* Sokoban luck penalty removed and added tracking of solving Sokoban
	  without any tricks
	* Monster generation increasing with turn count (from SporkHack)
	* Removed the Quest turn limit
	* Player vampire gets a charisma bonus when wearing an opera cloak (by L)
	* Some monster vampires get an opera cloak (from Slash'Em)