@@ -20,6 +20,7 @@
 	  - Added naming last broken object to #name menu (idea from AceHack/NH4)
 	  - Automatically identify scrolls of scare monster during pickup when
 	    turning to dust or changing known BUC state
+	  - Don't autopickup unpaid items (from NetHack 3.6)
 
 	* dungeon layout:
 	  - Backyard of watery castle get trap doors to ensure player can
